--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.41",
   "description": "React + Material UI all in one starter",
   "license": "MIT",
-  "author": "Anton Karpenko <i@karpolan.com> (https://karpolan.com)",
+  "author": "TrojanDeveloper",
   "keywords": [
     "react",
     "mui",
@@ -16,7 +16,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/karpolan/react-mui-pro-starter"
+    "url": "https://github.com/trojandeveloper/react-mui-template"
   },
   "dependencies": {
     "@emotion/react": "latest",
