--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-mui-pro-starter",
+  "name": "react-mui-template",
   "version": "1.0.41",
   "description": "React + Material UI all in one starter",
   "license": "MIT",
